# Langchain_training_project

./: .gitignore  00 _hello.py  01_parse_people_num.py  02_spam_detector.py  pyproject.toml  requirements.txt
data/: 01_rent.csv  01_rent_predicted.csv  01_submission100lines.csv  01_submission100lines_predicted.csv  02_crypto_spam.csv  03_vacancies.csv  04_dialogues.csv  06_math_problems.csv  07_fact_checker.csv  08_questions.csv
src/: 01_parse_people_num.py  02_spam_detector.py  03_vacancy_parser.py  04_dialogue.py  05_text_clean.py  06_math_agent.py  07_fact_checker.py  08_RAG_answers_for_pdf.py
